# blog_flask

./: README.md  config.py  microblog.py  pyproject.toml  requirements.txt
app/: __init__.py  errors.py  exceptions.py  forms.py  models.py  routes.py
app/static/styles/: custom.css
app/templates/: _post.html  base.html  edit_profile.html  explore.html  index.html  login.html  post.html  post_form.html  register.html  resume.html  resume_form.html  user.html
migrations/versions/: 386c7f735c8b_new_fields_in_user_model.py  70870d48c98c_updated_post_model_with_title_and_tag.py  86bc964781ef_upadded_resume.py  9b210ea505be_posts_table.py  e443218fc62e_updated_about_me_to_text.py  f856edfbb0bc_users_table.py
